# PacBioAssembly

./: .gitignore  CMakeLists.txt  Makefile.am  README.mkd  binary_parser.cpp  binary_parser.h  binary_test.cpp  common.h  configure.ac  local_aligner.h  result.fasta  seeds.txt  spaced_seed.cpp  stat_hash.c
doc/: ccs.eps  class.eps  final.tex  final_report.mkd  overlap.eps  progress.mkd  proposal.mkd  real.eps  spaced_seed.mkd
src/: .gitignore  Makefile.am  binary_test.cpp  common.h  dna.h  dna_seq.h  locator.cpp  quality.cpp  ref_seq.h  seq_aligner.h  spaced_seed.cpp  visual_align.cpp
test/: aligner_test.cpp  dna_test.cpp  real_align.txt  ref_test.cpp
